# nld-img-heat-map

./: .dive-ci.yaml  .dive-ui.yaml  .gitignore  API_USAGE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/docker/develop/: docker-compose-dev.yml
infra/docker/develop/app/: .app.env  Dockerfile
infra/docker/develop/database/: .database.env  Dockerfile
infra/docker/develop/database/init/: entrypoint.sh
infra/docker/develop/database/scripts/: is-database-up.sh
infra/docker/develop/webapp/: .webapp.env  Dockerfile  webapp-config.yml
resources/testing/: nld-img-analysis-api-env.postman_environment.json  nld-img-analysis-api.postman_collection.json
scripts/: docker-analysis.sh  docker-compose.sh  format.sh  generate-topology.sh  lint.sh  test.sh
src/: __main__.py
src/application/: container.py  factory.py  settings.py
src/common/errors/: exception.py
src/common/protocols/: event.py
src/common/utils/: parsing.py
src/common/utils/tests/: parsing_test.py
src/core/: pydantic.py
src/core/fastapi/: error.py  routes.py
src/core/fastapi/event/: handler.py
src/modules/imganalysis/domain/: value_objects.py
src/modules/imganalysis/domain/aggregate/: id.py  model.py
src/modules/imganalysis/infrastructure/persistence/: adapter.py  mapper.py  uow.py
src/modules/imganalysis/infrastructure/query/: dto.py  mapper.py  uow.py
src/modules/imganalysis/usecase/: __init__.py
src/persistence/imganalysis/: entity.py  repository.py
webapp/: main.py
webapp/common/: constants.py
webapp/common/utils/: enums.py  parsing.py  security.py
webapp/common/utils/tests/: parsing_test.py
webapp/core/fastapi/: openapi.py  responses.py  routing.py
webapp/core/fastapi/exceptions/: classes.py  handlers.py
webapp/modules/img_analysis/domain/: attributes.py  models.py
webapp/modules/shared/domain/: models.py
webapp/modules/users/domain/: models.py  schemas.py
webapp/server/: __init__.py  containers.py  database.py  events.py  factory.py
(+20 files in other folders)
