[project]
name = "nld-img-heat-map"
version = "0.1.0"
description = "Web service that provides a RESTful API for image analysis." 
readme = "README.md"
requires-python = ">=3.12"
authors =[
    { name = "Guilherme Gonçalves (lwglg)", email = "lwglguilherme@gmail.com" },
]

dependencies = [
    "asyncpgsa>=0.27.1",
    "dependency-injector[yaml]>=4.48.1",
    "fastapi==0.111.0",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "orjson>=3.10.18",
    "pydantic[email]>=2.11.7",
    "python-mf-data[rdb]>=0.2.6",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
