[project]
name = "nld-img-heat-map"
version = "0.1.0"
description = "Web service that provides a RESTful API for image analysis." 
readme = "README.md"
requires-python = ">=3.12"
authors =[
    { name = "Guilherme Gonçalves (lwglg)", email = "lwglguilherme@gmail.com" },
]

dependencies = [
    "asyncpgsa>=0.27.1",
    "dependency-injector>=4.48.1",
    "fastapi>=0.115.14",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pyyaml>=6.0.2",
    "swagger-ui-py>=25.7.1",
    "types-passlib>=1.7.7.20250602",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
